css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.topcontainer {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.topcontainer img {
    margin-left: 4%;
}

.navbar {
    display: flex;
    width: 80%;
    justify-content: space-around;
}

.navbar a {
    color: black;
    text-decoration: none;
}

.headerimg {
    background-image: url("../img/jumbo-about.png");
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    margin-left: 10%;
    height: 30%;
    width: 80%;
    margin-top: 3%;
    padding-bottom: 50px;
}


.container {
    width: 800px;
    margin: 0 auto;
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}



.box1 {
    background-color: teal;
}

.box2 {
    background-color: gold;
}

.box3 {
    background-color: cadetblue;
}

.box4 {
    background-color: coral;
}

.box5 {
    background-color: crimson;
}

.box6 {
    background-color: forestgreen;
}

.box7 {
    background-color: darkorchid;
}

.box8 {
    background-color: hotpink;
}

.box9 {
    background-color: indigo;
}

.box10 {
    background-color: dodgerblue;
}


.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

footer {
    width: 80%;
    background: black;
    margin-left: 10%;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}



/* About CSS */ 
.aboutcontainer {
    padding-top: 2%;
    margin-left: 10%;
    border-bottom: 2px dotted black;
    width: 80%;
    padding-bottom: 5%;
}

.worktogetherbox {
    padding-top: 2%;
    margin-left: 10%;
    border-bottom: 2px dotted black;
    width: 80%;
    padding-bottom: 5%;
}


.containermiddlesection {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    padding-left: 6%;
    padding-right: 6%;
    margin: 80px;
    height: 50%;
}


.Strategybox {
    max-width: 25%;
    border-bottom: 1px dotted black;
}

.Strategybox:hover{
    animation-duration: 1s;
    animation-name: colorchangeStrategy;
}

@keyframes colorchangeStrategy{
    from {
        background-color: white;
        color: black;
    }

    to {
        background-color: grey;
        color: black;
    }
}

.Strategybox p {
    padding-bottom: 10%;
}

.Howweworkbox {
    max-width: 25%;
    border-bottom: 1px dotted black;
}

.Howweworkbox:hover{
    animation-duration: 1s;
    animation-name: colorchangeHowweworkbox;
}

@keyframes colorchangeHowweworkbox{
    from {
        background-color: white;
        color: black;
    }

    to {
        background-color: grey;
        color: black;
    }
}

.Howweworkbox p {
    padding-bottom: 10%;
}

.PlacesweworkBox {
    max-width: 25%;
    border-bottom: 1px dotted black;
}

.PlacesweworkBox:hover{
    animation-duration: 1s;
    animation-name: colorchangePlacesweworkBox;
}

@keyframes colorchangePlacesweworkBox{
    from {
        background-color: white;
        color: black;
    }

    to {
        background-color: grey;
        color: black;
    }
}

.PlacesweworkBox p {
    padding-bottom: 10%;
}


.CollaborationBox {
    max-width: 25%;
    border-bottom: 1px dotted black;
}

.CollaborationBox:hover{
    animation-duration: 1s;
    animation-name: colorchangeCollaborationBox;
}

@keyframes colorchangeCollaborationBox{
    from {
        background-color: white;
        color: black;
    }

    to {
        background-color: grey;
        color: black;
    }
}

.CollaborationBox p {
    padding-bottom: 10%;
}

.containermiddlesection a {
    color: black;
    text-decoration: none;
    border: 1px solid black;
    padding: 5px;
    border-radius:5px;
}

.containermiddlesection a:hover{
    animation-duration: 1s;
    animation-name: colorchange;
}

@keyframes colorchange {
    from {
      color: black;
      background-color: white;
    }
  
    to {
      color: white;
      background-color: black;
    }
  }

